html and css file customize

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <div class="status-icon">O</div>
                 <div class="status-text">Online</div>
             </div>
+            
         </div>
         <div class="dropdown-container">
             <div class="dropdown-button">
@@ -109,5 +110,112 @@
             </div>
         </div>
     </div>
+
+    <!-- Page 2 -->
+    
+  <div id="main-container2">
+    <!-- Sidebar -->
+    <div class="sidebar">
+        <div class="logo-section">
+            <div class="logo"></div>
+            <div class="back-button">
+                <div class="icon">
+                    <i class="fa-solid fa-arrow-left"></i>
+                </div>
+            </div>
+        </div>
+        <div class="menu-item">
+            <div class="menu-icon">
+                <i class="fa-solid fa-vector-square"></i>
+            </div>
+            <div class="menu-text">
+                <p>Setting Up Your Site</p>
+            </div>
+        </div>
+        <div class="status">
+            <div class="status-icon">O</div>
+            <div class="status-text">Online</div>
+        </div>
+    </div>
+
+
+    <!-- Main Content -->
+
+    <div class="main-content">
+        <div class="main-a1">Add products to your site</div>
+        <div class="main-button1">Continue</div>
+
+        <div class="main-slider1">
+          <div class="main-sub-slider">
+            <div class="main-slider-text1">Products</div>
+            <div class="main-slider-button1">
+               <div class="main-slider-icon">
+                <i class="fa-solid fa-plus"></i>
+               </div>
+                Add from Products Master</div>
+            <div class="main-slider-button2">Add product</div>
+          </div>
+
+          <div class="sub-slider">
+            <a class="sub-slider-a" href="">Learn more</a>
+          </div>
+
+          <div class="main-type">
+            <div class="type">
+                <b>Type:</b>
+                <p>Physical</p>
+                <i class="fa-solid fa-xmark"></i>
+            </div>
+            <div class="sub-type">
+                <i class="fa-solid fa-plus"></i>
+                <p class="sub-type-p">Add filter</p>
+            </div>
+          </div>
+
+          <div class="sidebar-header">
+            <div class="sidebar-header-text">2 Products</div>
+            <div class="sidebar-header-export">
+               <div class="sub-export-i"><i class="fa-solid fa-upload"></i></div>
+               <p>Export</p>
+               <div class="sub-export-i"><i class="fa-solid fa-arrow-down"></i></div>
+            </div>
+            <div class="sidebar-header-import">
+               <div class="sub-import-i"><i class="fa-solid fa-download"></i></div>
+               <div class="sub-import-text"><p>Import</p></div>
+               <div class="sub-import-i"><i class="fa-solid fa-arrow-down"></i></div>
+            </div>
+            <div class="sidebar-header-i">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+          </div>
+
+          <div class="header">
+            <div class="header-name1"></div>
+            <div class="header-name">Name</div>
+            <div class="header-name">Type</div>
+            <div class="header-name">Category</div>
+            <div class="header-name">Brand</div>
+            <div class="header-name">Price</div>
+            <div class="header-name">Inventory</div>
+          </div>
+
+          <span></span>
+
+          <div class="payment-method-item">
+            <div class="payment-item1">
+                <div class="item1"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+            </div>
+            <div class="payment-item1"></div>
+          </div>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
